<resources>
    <string name="app_name">Dublin Bus</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>


    <string name="content_authority" translatable="false">com.jmgarzo.dublinbus</string>
    <string name="title_activity_route">Route</string>

    <string name="btn_route">Routes</string>
    <string name="btn_real_time">RealTime</string>

    <!--labels-->
    <string name="label_search">Search</string>

    <!--Route Strings-->
    <string name="route_title">Bus Routes</string>

    <string name="label_from">From: </string>
    <string name="label_towards">Towards: </string>
    <string name="route_search_hint">Route, i.e. 39a</string>


    <!--Bus Stop Strings-->
    <string name="bus_stop_title">Bus Stops</string>
    <string name="bus_stop_search_hint">Bus Stop, i.e.:4747</string>
    <string name="bus_stop_label">Bus Stop: </string>


    <!--Favourite Stop Strings-->
    <string name="favourite_bus_stop_title">Favourite Bus Stop</string>
    <string name="favorite_empty_error_message">Your favourite list is empty </string>

    <!--Real Time Bus Stop-->
    <string name="list_label_from">From </string>
    <string name="list_label_to"> to </string>
    <string name="real_time_stop_title"> Bus Stop: </string>
    <string name="real_time_stop_minutes_label">min</string>
    <string name="real_time_stop_minus" translatable="false">-</string>

    <string name="pref_real_time_connection_status" translatable="false">connection_status</string>

    <string name="empty_real_time_stop_list">No Bus Stop Information Available</string>
    <string name="empty_real_time_stop_no_network">No Bus Stop Information Available. The network is not available to fetch bus stop data.</string>
    <string name="empty_real_time_stop_server_down">No Bus Stop information available. The server is not returning data.</string>
    <string name="empty_real_time_stop_server_error">No Bus Stop information available. The server is not returning  data.</string>
    <string name="empty_real_time_stop_invalid_stop">No Bus Stop information available. The Bus Stop is not recognized by the server.</string>

    <!--route detail-->

    <string name="route_detail_activity_fragment_title"> Route Stops: </string>
    <string name="route_label">Route:</string>
    <!--Strings for SharedPreference-->
    <string name="pref_route_information_db" translatable="false">route_information_db</string>
    <string name="pref_route_db" translatable="false">route_db</string>
    <string name="pref_bus_stop_db" translatable="false">bus_stop_db</string>
    <string name="pref_operator_information" translatable="false">operator_information</string>
    <string name="pref_exist_db" translatable="false">exist_db</string>
    <string name="pref_admod_active" translatable="false">admod_active</string>
    <string name="pref_is_update_database_active" translatable="false">update_database_active</string>
    <string name="pref_is_error_on_update_db" translatable="false">error_on_update_db</string>
    <string name="pref_is_first_start_db" translatable="false">is_first_start_db</string>

    <!--Bus Stop Near-->
    <string name="bus_stop_near_title">Bus Stops Map</string>


    <!--Description content -->
    <string name="description_arrow_right">arrow right</string>
    <string name="title_activity_route_detail">Route Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_route_maps">Map </string>
    <string name="title_activity_route_maps_label_route">Route </string>

    <!--Constants-->
    <string name="constant_dublin_bus_operator" translatable="false">bac</string>

    <!--Admod-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9433862228892990/5634404368</string>
    <string name="banner_bus_stop_id" translatable="false">ca-app-pub-9433862228892990/9517986669</string>
    <string name="banner_route_id" translatable="false">ca-app-pub-9433862228892990/2952578317</string>
    <string name="banner_route_detail_id" translatable="false">ca-app-pub-9433862228892990/3951455909</string>
    <string name="banner_favourite_id" translatable="false">ca-app-pub-9433862228892990/8324502109</string>
    <string name="banner_real_time_id" translatable="false">ca-app-pub-9433862228892990/1567522066</string>
    <string name="banner_route_map_id" translatable="false">ca-app-pub-9433862228892990/5587442258</string>
    <string name="banner_near_bus_stop_id" translatable="false">ca-app-pub-9433862228892990/3117191585</string>


    <!--maps-->
    <string name="location_permission_denied">Dublin Bus requires location permission to enable the \'maps\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Dublin Bus\'.</string>
    <string name="permission_rationale_location">Access to the location service is required run the \'maps\' feature, which shows your current location on the map.</string>
    <string name="permission_required_toast">Location permission is required for this layer.</string>

    <string name="routes_label">Routes:</string>



<!--    About Activity-->

    <string name="about_title">About</string>
    <string name="description_label">Description</string>
    <string name="contact_label">Contact</string>

    <string name="app_description">Essential day to day aplication.
        \n\nYou will be able to know all the arrivals of buses in real time.
        \n\nAlso you can add your frequently stops to your favorite list.
\n\nThe application menu is very simple, you can:\n
\n\t- Receive real time information.
\n\t- Manage your favorite stops.
\n\t- Direct access to search by stops, route number and address.
\n\t- Map support features to find your stop and directions from your current location.
\n\nThis application is not created or affiliated to Dublin Bus.</string>
    <string name="contact_email" translatable="false">jmgarzo.developer@gmail.com</string>

    <string name="data_information">Dublin Bus for Android use a Creative Common 4.0 API. Dublin Bus for Android is not responsible in the event of any data inconsistency.
You can take a look here.</string>


</resources>
